# gcp_python_project

./: README.md  pyproject.toml
src/: bigQueryGetter.py  cloudClientConnector.py  inputRequests.py  logger.py  main.py  storageBucketManager.py  storageFileManager.py  storageGetter.py  uno.py
src/components/: cloudClientConnector.py  inputRequests.py  localGetter.py  logger.py
src/components/gcp_lib/big_query/: bigQueryGetter.py  bigQueryManager.py
src/components/gcp_lib/cloud_storage/: storageBucketManager.py  storageFileManager.py  storageGetter.py
src/components/gcp_lib/pub_sub/: publisher.py  pubsubManager.py  pubsubTopicManager.py  subscriber.py
src/components/processer/: main.py
src/config/: film.csv  film.json
stage/: test_main.py  test_main_stg.py
test/: test_bigQueryGetter.py  test_cloudClient.py  test_cloudClientConnector.py  test_storageGetter.py
test/config/: message.json  smooth-tesla-413121-a1ac05929582.json  training-gcp-309207-683a827c1e0e.json
test/test_components/: test_cloudClientConnector.py
test/test_components/test_gcp_lib/test_big_query/: test_bigQueryGetter.py
test/test_components/test_gcp_lib/test_cloud_storage/: test_storageGetter.py
